Implemented recordId parameter in pricing plan and region options endpoints
